[package]
name = "zeth-preflight"
version = "0.3.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies.zeth-core]
workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
async-trait.workspace = true
flate2.workspace = true
k256.workspace = true
log.workspace = true
pot.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

reth-chainspec.workspace = true
reth-revm.workspace = true
reth-primitives.workspace = true
reth-storage-errors.workspace = true
