[package]
name = "zeth-trie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
alloy-consensus.workspace = true
alloy-primitives = { workspace = true, features = ["map", "serde"]}
alloy-rlp.workspace = true
arrayvec.workspace = true
rkyv.workspace = true
serde.workspace = true
thiserror.workspace = true
tiny-keccak.workspace = true
