[package]
name = "zeth"
version = "0.1.0"
edition = "2021"

[dependencies.risc0-zkvm]
workspace = true
features = ["std", "client"]

[dependencies.zeth-guests]
workspace = true

[dependencies.zeth-core]
workspace = true

[dependencies.zeth-preflight]
workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
bincode.workspace = true
bytemuck.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
pot.workspace = true
reth-chainspec.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
metal = ["risc0-zkvm/metal"]
cuda = ["risc0-zkvm/cuda"]
disable-dev-mode = ["risc0-zkvm/disable-dev-mode"]
