[package]
name = "zeth"
version = "0.1.0"
edition = "2021"

[dependencies.bonsai-sdk]
workspace = true

[dependencies.risc0-zkvm]
workspace = true
features = ["client"]

[dependencies.zeth-guests]
workspace = true

[dependencies.zeth-core]
workspace = true

[dependencies.zeth-preflight]
workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
bincode.workspace = true
bytemuck.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
reth-chainspec.workspace = true
tokio.workspace = true

[features]
debug-guest-build = ["zeth-guests/debug-guest-build"]
disable-dev-mode = ["risc0-zkvm/disable-dev-mode"]
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
