[package]
name = "op-block"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
k256 = { version = "=0.13.1", features = ["std", "ecdsa"], default_features = false }
risc0-zkvm = { version = "0.19", default-features = false, features = ['std'] }
zeth-lib = { path = "../../lib", default-features = false }

[patch.crates-io]
# use optimized risc0 circuit
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risc0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risc0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2/v0.10.6-risc0" }

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"
