[package]
name = "reth-block-eth"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.0.3", default-features = false, features = ['std'] }
reth-evm = { path = "../../../reth/crates/evm", default-features = false }
reth-evm-ethereum = { path = "../../../reth/crates/ethereum/evm", default-features = false }
reth-execution-types = { path = "../../../reth/crates/evm/execution-types", default-features = false }
reth-chainspec = { path = "../../../reth/crates/chainspec", default-features = false }
reth-primitives = { path = "../../../reth/crates/primitives", default-features = false }
reth-revm = { path = "../../../reth/crates/revm", default-features = false }
reth-storage-errors = { path = "../../../reth/crates/storage/errors", default-features = false }

#reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.3", default-features = false }
#reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.3", default-features = false }
#reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.3", default-features = false }
#reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.3", default-features = false }
#reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.3", default-features = false }
#reth-prune-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.3", default-features = false }
#reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.3", default-features = false }
#zstd = { version = "0.13.2", default-features = false, features = ["no_asm", "experimental"]}

# Ethereum
revm = { version = "12.1.0", features = [
    "std",
    "secp256k1",
    "blst",
], default-features = false }
revm-primitives = { version = "7.1.0", features = [
    "std",
], default-features = false }

# Alloy
alloy-eips = { version = "0.2", default-features = false }
alloy-sol-types = "0.7.2"

[patch.crates-io]
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0" }
#sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
#c-kzg = { git = "https://github.com/risc0/c-kzg-4844.git", rev = "304eacb" }
c-kzg = { git = "https://github.com/hashcashier/c-kzg-risczero.git", rev = "30aa46a" }

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"
