[package]
name = "zeth-guests-reth-ethereum"
version = "0.1.0"
edition = "2021"

[workspace]

[profile.release]
codegen-units = 1
debug = 1
lto = "fat"

[profile.release.build-override]
codegen-units = 1
opt-level = 3

[dependencies.risc0-zkvm]
git = "https://github.com/risc0/risc0"
rev = "f74920596c745a8bb7e8a6f1dfdefb44d03ed06f"
default-features = false
features = ["std", "unstable"]

[dependencies.risc0-zkvm-platform]
git = "https://github.com/risc0/risc0"
rev = "f74920596c745a8bb7e8a6f1dfdefb44d03ed06f"
features = ["sys-getenv"]

[dependencies.zeth-core]
path = "../../crates/core"
default-features = false

[dependencies.zeth-core-ethereum]
path = "../../crates/core-ethereum"
default-features = false

[dependencies]
anyhow = { version = "1.0.86", default-features = false }
c-kzg = { version = "=1.0.3", features = ["risc0-ffi"] }
lazy_static = "1.5.0"

reth-chainspec = { git = "https://github.com/risc0/reth", branch = "p1.1.0_zstd", default-features = false, features = [
    "std",
] }

[patch.crates-io]
c-kzg = { git = "https://github.com/risc0/c-kzg-4844.git", branch = "p1.0.3" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", rev = "37645712de2d24f56410f3ba0bfc71175df51cc8" }
