[package]
name = "zeth-guests-reth-ethereum"
version = "0.1.0"
edition = "2021"

[workspace]

[profile.release]
codegen-units = 1
debug = 1
lto = "fat"

[profile.release.build-override]
codegen-units = 1
opt-level = 3

[dependencies.risc0-zkvm]
version = "3.0.0-rc.1"
features = ["unstable"]

[dependencies.risc0-zkvm-platform]
version = "2.0.3-rc.1"
features = ["sys-getenv"]

[dependencies.zeth-core]
path = "../../crates/core"
default-features = false

[dependencies]

[dependencies.zeth-core-ethereum]
path = "../../crates/core-ethereum"
default-features = false

[patch.crates-io]
blst = { git = "https://github.com/risc0/blst", tag = "v0.3.14-risczero.2"}
c-kzg = { git = "https://github.com/risc0/c-kzg-4844.git", tag = "c-kzg/v2.1.0-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
substrate-bn = { git = "https://github.com/risc0/paritytech-bn", tag = "v0.6.0-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
