[package]
name = "zeth-guests-reth-optimism"
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.81"
authors = ["hashcashier", "wollac", "intoverflow"]
homepage = "https://github.com/risc0/zeth"
repository = "https://github.com/risc0/zeth"
keywords = ["stateless", "zk", "evm", "ethereum", "optimism"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[workspace]

[profile.release]
codegen-units = 1
debug = 1
lto = "fat"

[profile.release.build-override]
codegen-units = 1
opt-level = 3

[dependencies.risc0-zkvm]
version = "1.2.1"
features = ["std", "unstable"]

[dependencies.risc0-zkvm-platform]
version = "1.2.1"
features = ["sys-getenv"]

[dependencies.zeth-core]
path = "../../crates/core"
default-features = false

[dependencies.zeth-core-optimism]
path = "../../crates/core-optimism"
default-features = false

[dependencies]
c-kzg = { version = "=1.0.3", features = ["risc0-ffi"] }

[patch.crates-io]
c-kzg = { git = "https://github.com/risc0/c-kzg-4844.git", branch = "p1.0.3" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
